--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,6 +13,11 @@
   --transition: 1s cubic-bezier(.05,.5,0,1);
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: #000;
   color: #fff;
@@ -95,11 +100,9 @@ button {
   background-color: rgba(255, 255, 255, 0.2);
 }
 .container .layers .layer-1 {
-  background-image: url(/public/images/layer-1.jpg);
   transform: translateZ(-55px) scale(1.06);
 }
 .container .layers .layer-2 {
-  background-image: url(/public/images/layer-2.png);
   transform: translateZ(80px) scale(0.93);
 }
 .container .layers .layer-3 {
@@ -109,11 +112,9 @@ button {
   transform: translateZ(190px) scale(0.9);
 }
 .container .layers .layer-5 {
-  background-image: url(/public/images/layer-5.png);
   transform: translateZ(300px) scale(0.9);
 }
 .container .layers .layer-6 {
-  background-image: url(/public/images/layer-6.png);
   transform: translateZ(380px);
 }
 .container .layers .layer-4, .container .layers .layer-5, .container .layers .layer-6 {
